updated information for pherl lab

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+		  <p>&copy 2025 PHERL Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a> and based on original website from the <a href="https://www.allanlab.org/aboutwebsite.html"> Allan Lab</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
               
 
 
@@ -13,13 +13,14 @@
 
 		</div>
 		<div class="col-sm-4">
-		<p>We are part of the <a href="https://www.physik.lmu.de/en//">Faculty of Physics</a> at the<a href="https://www.lmu.de"> University of Munich (LMU)</a>. We are still associated with the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a>, where most of our instrument are.</p>
+		<p>We are part of the <a href="https://www.sydney.edu.au/engineering/schools/school-of-aerospace-mechanical-and-mechatronic-engineering.html">Faculty of Aerospace, Mechanical and Mechatronic Engineering (AMME) </a> at the University of Sydney and are part of the <a href="https://www.sydney.edu.au/engineering/our-research/research-centres-and-institutes/australian-centre-for-robotics.html"> ACFR </a>. </p>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-Geschwister-Scholl-Platz 1<br />
-		  80539 München<br />
-		  Germany <br />
+Rose Engineering Building (J04)<br />
+		  The University of Sydney <br />
+		  NSW 2006 <br />
+		  Australia <br />
 		</div>
 	  </div>
 	</div>
