--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-8">
-        <h1>Welcome to the Allan Lab</h1>
+        <h1>Welcome to the PHERL Lab! </h1>
+        <h3> Prabhakar Human-Engaged Robotics and Learning (PHERL) Lab</h3>
 
 	{{ content }}
   </div>
