update pages from we to I

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 
 		</div>
 		<div class="col-sm-4">
-		<p>We are part of the <a href="https://www.sydney.edu.au/engineering/schools/school-of-aerospace-mechanical-and-mechatronic-engineering.html">Faculty of Aerospace, Mechanical and Mechatronic Engineering (AMME) </a> at the University of Sydney and are part of the <a href="https://www.sydney.edu.au/engineering/our-research/research-centres-and-institutes/australian-centre-for-robotics.html"> ACFR </a>. </p>
+		<p>I am part of the <a href="https://www.sydney.edu.au/engineering/schools/school-of-aerospace-mechanical-and-mechatronic-engineering.html">Faculty of Aerospace, Mechanical and Mechatronic Engineering (AMME) </a> at the University of Sydney and are part of the <a href="https://www.sydney.edu.au/engineering/our-research/research-centres-and-institutes/australian-centre-for-robotics.html"> ACFR </a>. </p>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
